--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 	    app:layout_constraintStart_toStartOf="parent"    
-	    app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    
+    <TextView 
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button_next"
+        app:layout_constraintTop_toBottomOf="@id/label"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
